--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
 <meta name="apple-mobile-web-app-capable" content="yes" />-->
 <title>Lift</title>
-<link rel="stylesheet" type="text/css" href="lift.css"/>
 <link rel="icon" type="image/png" href="/images/icon.png" />
 <link rel="apple-touch-icon" href="/images/touch.png" />
 <link rel="stylesheet" type="text/css" href="/lib/beta/css/client.css" />
 <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.css" />
+<link rel="stylesheet" type="text/css" href="lift.css"/>
 <!--<link rel="stylesheet" type="text/css" href="/jquery/jquery.mobile-1.0a3.min.css" />-->
 <script type="text/javascript" src="/jquery/jquery-1.5.min.js"></script>
 <script type="text/javascript" src="/jquery/jquery.mobile-1.0a3.min.js"></script>
@@ -24,46 +24,33 @@ $(document).ready(lift.onReady);
 </head>
 <body>
 
-<div data-role="page" id="home" data-theme="a">
+<div data-role="page" id="home">
 	<div data-role="header">
 		<h1>Home</h1>
 	</div>
 
 	<div data-role="content" id="content">
-		<!-- <p><a href="#push">Push</a></p>
-		<p><a href="#pull">Pull</a></p> -->
+		
 	</div>
 
-		<div data-role="footer">
+	<div data-role="footer">
 		<h4>Bottom</h4>
 	</div>
 </div>
 
 
 
-
-
-
-
-
-
-
-<div data-role="page" id="push" data-theme="a">
+<div data-role="page" id="push">
 	<div data-role="header">
 		<h1>Push</h1>
 	</div>
   
 	<div data-role="content">
-	
-	
+
 		<div data-role=collapsible>
 			<h3>Cardio</h3>
 			<p>5 min warmup!</p>
 		</div>
-		
-		
-		
-		
 		
 		<div data-role=collapsible data-collapsed=true>
 			<h3>Rotator Cuff Warmup</h3>
